# confection

./: .gitignore  MANIFEST.in  README.md  azure-pipelines.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: cibuildwheel.yml  publish_pypi.yml  tests.yml
confection/: __init__.py  _config.py  _errors.py  _fill_config.py  _registry.py  about.py  registry.py  structures.py  util.py
confection/tests/: test_2.py  test_config.py  test_config_values.py  test_frozen_structures.py  test_param_processing.py  test_pydantic_generators.py  test_registry.py  util.py  util_mapping.py
