[metadata]
version = 0.0.3
description = The sweetest config system for Python
url = https://github.com/explosion/confection
author = Explosion
author_email = contact@explosion.ai
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering

[options]
zip_safe = true
include_package_data = true
python_requires = >=3.6
install_requires =
    pydantic>=1.7.4,!=1.8,!=1.8.1,<1.11.0
    typing_extensions>=3.7.4.1,<4.2.0; python_version < "3.8"
    srsly>=2.4.0,<3.0.0

[sdist]
formats = gztar

[flake8]
ignore = E203, E266, E501, E731, W503
max-line-length = 80
select = B,C,E,F,W,T4,B9
exclude =
    .env,
    .git,
    __pycache__,

[mypy]
ignore_missing_imports = True
no_implicit_optional = True
