[metadata]
version = 1.0.0a1
description = The sweetest config system for Python
url = https://github.com/explosion/confection
author = Explosion
author_email = contact@explosion.ai
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Topic :: Scientific/Engineering

[options]
zip_safe = true
include_package_data = true
python_requires = >=3.10
install_requires =
    pydantic>=2.0,<3.0
    srsly>=2.4.0,<3.0.0

[sdist]
formats = gztar

[flake8]
ignore = E203, E501, E704, W503
max-line-length = 88
select = B,C,E,F,W,T4,B9
exclude =
    .env,
    .git,
    __pycache__,

[mypy]
ignore_missing_imports = True
no_implicit_optional = True
